<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sheepoox.tablo.app.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/table_view_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.18">

        <HorizontalScrollView
            android:id="@+id/table_view_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">



                <LinearLayout
                    android:id="@+id/times"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/class_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/time_cells"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text="Po"
                            android:textColor="@color/dayTitles"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/day0_cells"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text="Út"
                            android:textColor="@color/dayTitles"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/day1_cells"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text="St"
                            android:textColor="@color/dayTitles"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/day2_cells"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text="Čt"
                            android:textColor="@color/dayTitles"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/day3_cells"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/day4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_weight="1"
                            android:text="Pá"
                            android:textColor="@color/dayTitles"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/day4_cells"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <!--TextView
                    android:id="@+id/main_error_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView-->

            </LinearLayout>
        </HorizontalScrollView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <!--Button
            android:id="@+id/btn_manual_update"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="start"
            android:text="start"/>

        <Button
            android:id="@+id/asd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="stop"
            android:text="stop"/>

        <Button
            android:id="@+id/assd"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="stopRunnable"
            android:text="sr"/-->

        <Button
            android:id="@+id/previous_week"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="changeWeek"
            android:text="@string/btn_previous"/>


        <TextView
            android:id="@+id/weekView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/advice_settings"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/next_week"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:enabled="true"
            android:onClick="changeWeek"
            android:text="@string/btn_next"/>

    </LinearLayout>

</LinearLayout>
